Highlight active category, use borders on mobile too (bug 1166413)

--- a/src/media/css/elements--categories.styl
+++ b/src/media/css/elements--categories.styl
@@ -26,6 +26,8 @@ mkt-category-item {
 }
 
 .mkt-category-link {
+    border: 2px solid rgba($greyscale-white, 0.2);
+    border-radius : 5px;
     color: $greyscale-white;
     font-weight: 300;
     display: inline-block;
@@ -34,6 +36,9 @@ mkt-category-item {
     padding: 10px;
     transition: none;
 
+    +media--wide-tablet() {
+        margin: 0;
+    }
     // Set hover bg on the :after to download it but make it invisible.
     &:after {
         category-sprite-alt();
@@ -59,16 +64,9 @@ mkt-category-item {
     }
     &:hover {
         background-color: $greyscale-white;
+        border-color: $greyscale-white;
         color: $color--nav--child-bg;
         text-decoration: none;
-    }
-    +media--wide-tablet() {
-        border: 2px solid rgba($greyscale-white, 0.2);        
-        border-radius : 5px;
-        margin: 0;
-        &:hover {
-            border-color: $greyscale-white;
-        }
     }
 }
 
@@ -82,6 +80,7 @@ mkt-category-item {
     }
 }
 
+mkt-header-child:hover .mkt-category-link--active,
 mkt-category-list:hover .mkt-category-link--active {
     // Hide all active-ness when hovering over the category list.
     background-color: transparent;
